fixed alignment

--- a/src/Styling/Progress.css
+++ b/src/Styling/Progress.css
@@ -4,8 +4,7 @@
     width: 48vw;
     height: 25vh;
     float: none;
-    margin: 3vh 0 3vh;
-    margin-left: 10vw;
+    margin: 3vh 0 3vh 10vw;
 }
 
 .Title {
